# tangle_indexer

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  indexer-config.toml  package.json  turbo.json
app/: .env.example  .gitignore  package.json  svelte.config.js  theme.css  vite.config.ts
app/src/: app.css  app.d.ts  app.html  hooks.ts
app/src/lib/components/: dropdown-nested.svelte  nav-search.svelte  nav-simple.svelte  nav.svelte
app/src/lib/stores/: lib.ts  nostr-session.svelte.ts
app/src/lib/types/: page.ts
app/src/lib/types/views/: profile.ts
app/src/lib/utils/: _env.ts  i18n.ts
app/src/lib/utils/app/: lib.ts  storage.ts  theme.ts
app/src/lib/utils/listing/: index.ts
app/src/lib/utils/profile/: index.ts
app/src/lib/utils/routes/: gen.tmp.ts  lib.ts  localised.gen.ts
app/src/lib/views/profile/: profile-indexed.svelte  profile-unknown-nip05.svelte  profile-unknown-npub.svelte  profile-unknown-public-key.svelte  profile-unknown.svelte  profile.svelte
app/src/params/: country.ts  nip05.ts  npub.ts  public_key.ts
app/src/routes/: +layout.svelte  +page.svelte  +page.ts
app/src/routes/(market)/(listing)/: +error.svelte
app/src/routes/(market)/(listing)/[0=country]/: +page.svelte  +page.ts
app/src/routes/(market)/(profile)/: +layout.svelte
app/src/routes/(market)/(profile)/[0=nip05]/: +error.svelte  +page.svelte  +page.ts
app/src/routes/(market)/(profile)/profile/: +error.svelte
app/src/routes/(market)/(profile)/profile/[...query]/: +page.ts
app/src/routes/(market)/(profile)/profile/[0=npub]/: +page.svelte  +page.ts
app/src/routes/(market)/(profile)/profile/[0=public_key]/: +page.svelte  +page.ts
app/static/fonts/brown-regular/: styles.css
app/static/fonts/serif/: styles.css
crates/indexer/: .gitignore  Cargo.toml  config.toml
crates/indexer-utils/: .gitignore  Cargo.toml
crates/indexer-utils/src/: crypto.rs  database.rs  file.rs  hash.rs  lib.rs  nostr.rs  paths.rs  sqlite.rs  write.rs
crates/indexer/src/: audit.rs  config.rs  lib.rs  main.rs  telemetry.rs
crates/indexer/src/domain/: indexer.rs
crates/indexer/src/domain/event/: kind.rs  mod.rs
crates/indexer/src/domain/events/: listing.rs  metadata.rs  mod.rs  profile.rs
crates/indexer/src/domain/indexer/: key.rs  kind.rs  mod.rs
crates/indexer/src/domain/indexer/models/: listing.rs  metadata.rs  mod.rs  profile.rs
crates/indexer/src/domain/resolvers/: profile.rs
crates/indexer/src/relay/: event.rs  model.rs  record.rs
dev/: docker-compose.yml  indexer-nginx.conf  relay-config.toml
indexer/: Cargo.toml
indexer/data/radroots-market-indexer/indexer_db/: db
indexer/src/: audit.rs  config.rs  lib.rs  main.rs  runner.rs  telemetry.rs
indexer/src/cli/: args.rs
indexer/src/domain/events/: comment.rs  follow.rs  job_feedback.rs  job_request.rs  job_result.rs  listing.rs  mod.rs  post.rs  profile.rs  reaction.rs
indexer/src/domain/indexer/: key.rs  kind.rs  mod.rs
indexer/src/domain/indexer/models/: comment.rs  follow.rs  job_feedback.rs  job_request.rs  job_result.rs  listing.rs  mod.rs  post.rs  profile.rs  reaction.rs
indexer/src/domain/resolvers/: profile.rs
indexer/src/relay/: event.rs  record.rs
indexer/src/utils/: crypto.rs  db.rs  io.rs  mod.rs  nostr.rs  serde_utils.rs  sqlite.rs  strings.rs
indexer/tests/: indexer_determinism.rs
