[workspace]
members = [
    "indexer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "AGPL-3.0"

[workspace.dependencies]
radroots-core = { path = "../crates/core" }
radroots-events = { path = "../crates/events" }
radroots-events-indexed = { path = "../crates/events-indexed" }

anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = { version = "0.2" }
once_cell = { version = "1" }
regex = { version = "1" }
