[package]
name = "radroots-market-indexer"
version = "0.1.0"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
description = "Radroots market event indexer"
license = "AGPLv3"
edition = "2021"

[features]
default = []
audit = []

[dependencies]
radroots-core = { workspace = true }
radroots-events = { workspace = true }
radroots-events-codec = { workspace = true }
radroots-events-indexed = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

bincode = { version = "2.0", features = ["derive", "serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sled = "0.34.7"
sha2 = "0.10.9"
nostr = "0.43.0"

[dev-dependencies]
tempfile = "3"
