[package]
name = "indexer-utils"
version = "0.1.0"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
license = "AGPLv3"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", features = ["derive", "serde"] }
nostr = "0.43.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "1.0"
tracing = "0.1"
