[package]
name = "radroots-market-relay-indexer"
version = "0.1.0"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
license = "AGPLv3"
edition = "2021"

[dependencies]
indexer-utils = { path = "../indexer-utils" }
radroots-common = { path = "../../../../../crates/radroots-common/" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
regex = "1"

[features]
default = []
audit = []
