[package]
name = "radroots-market-relay-indexer"
version = "0.1.0"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
license = "AGPLv3"
edition = "2021"

[features]
default = []
audit = []

[dependencies]
indexer-utils = { path = "../indexer-utils" }
radroots-events = { workspace = true }
radroots-events-indexed = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }

